[package]
name = "podfeed"
version = "0.2.5"
repository = "https://github.com/trypsynth/podfeed"
edition = "2021"

[dependencies]
regex = "1.11.1"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "json", "rustls-tls-webpki-roots"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
